syntax = "proto3";

package sessionhub;

option go_package = "github.com/vibelog/backend/proto";

// Main service for SessionHub backend
service SessionHubService {
  // Authentication
  rpc ValidateApiKey(ValidateApiKeyRequest) returns (ValidateApiKeyResponse);

  // Projects
  rpc GetProjects(GetProjectsRequest) returns (GetProjectsResponse);
  rpc CreateProject(CreateProjectRequest) returns (Project);

  // Sessions
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
  rpc UpsertSession(CreateSessionRequest) returns (UpsertSessionResponse);
  rpc GetSession(GetSessionRequest) returns (Session);
  rpc UpdateSession(UpdateSessionRequest) returns (Session);

  // Interactions - Streaming for large imports
  rpc StreamInteractions(stream StreamInteractionsRequest) returns (StreamInteractionsResponse);

  // Batch operations (alternative to streaming)
  rpc AddInteractionsBatch(AddInteractionsBatchRequest) returns (AddInteractionsBatchResponse);

  // Observations for context injection
  rpc GetProjectObservations(GetProjectObservationsRequest) returns (GetProjectObservationsResponse);

  // User preferences
  rpc GetUserPreferences(GetUserPreferencesRequest) returns (GetUserPreferencesResponse);

  // Attachment storage
  rpc UploadAttachment(UploadAttachmentRequest) returns (UploadAttachmentResponse);

  // Plan file storage (uploads plan .md files to team-based storage)
  rpc UploadPlanFile(UploadPlanFileRequest) returns (UploadPlanFileResponse);

  // Session quota for free tier limit enforcement
  rpc GetSessionQuota(GetSessionQuotaRequest) returns (GetSessionQuotaResponse);

  // ============================================================================
  // Teams
  // ============================================================================

  // Team CRUD
  rpc CreateTeam(CreateTeamRequest) returns (Team);
  rpc GetTeam(GetTeamRequest) returns (Team);
  rpc UpdateTeam(UpdateTeamRequest) returns (Team);
  rpc DeleteTeam(DeleteTeamRequest) returns (DeleteTeamResponse);
  rpc ListUserTeams(ListUserTeamsRequest) returns (ListUserTeamsResponse);

  // Team Membership
  rpc InviteMember(InviteMemberRequest) returns (InviteMemberResponse);
  rpc AcceptInvitation(AcceptInvitationRequest) returns (AcceptInvitationResponse);
  rpc RevokeInvitation(RevokeInvitationRequest) returns (RevokeInvitationResponse);
  rpc ListPendingInvitations(ListPendingInvitationsRequest) returns (ListPendingInvitationsResponse);
  rpc RemoveMember(RemoveMemberRequest) returns (RemoveMemberResponse);
  rpc UpdateMemberRole(UpdateMemberRoleRequest) returns (UpdateMemberRoleResponse);
  rpc ListMembers(ListMembersRequest) returns (ListMembersResponse);
  rpc TransferOwnership(TransferOwnershipRequest) returns (TransferOwnershipResponse);

  // Team Encryption Keys
  rpc GetTeamPublicKey(GetTeamPublicKeyRequest) returns (GetTeamPublicKeyResponse);

  // User Encryption Keys (for personal sessions)
  rpc GetUserPublicKey(GetUserPublicKeyRequest) returns (GetUserPublicKeyResponse);

  // ============================================================================
  // Team Skills (sync between web UI and plugin)
  // ============================================================================

  // Get approved team skills for syncing to plugin as SKILL.md files
  rpc GetTeamSkills(GetTeamSkillsRequest) returns (GetTeamSkillsResponse);

  // Create a team skill draft from the plugin (local â†’ team push)
  rpc CreateTeamSkill(CreateTeamSkillRequest) returns (CreateTeamSkillResponse);
}

// ============================================================================
// Authentication Messages
// ============================================================================

message ValidateApiKeyRequest {
  string api_key = 1;
}

message ValidateApiKeyResponse {
  string user_id = 1;           // Supabase Auth UUID
  string email = 3;
  string subscription_tier = 4;
}

// ============================================================================
// Project Messages
// ============================================================================

message GetProjectsRequest {
  // Empty - uses authenticated user from JWT
}

message GetProjectsResponse {
  repeated Project projects = 1;
}

message CreateProjectRequest {
  string name = 1;
  string display_name = 2;
  optional string description = 3;
  optional string git_remote = 4;
  map<string, string> metadata = 5;
}

message Project {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string display_name = 4;
  optional string description = 5;
  optional string git_remote = 6;
  string created_at = 7;
  string updated_at = 8;
  optional string last_activity_at = 9;
  bool archived = 10;
  map<string, string> metadata = 11;

  // GitHub integration fields
  optional string github_repo_name = 12;
  optional string github_repo_owner = 13;
  optional string github_repo_id = 14;
  optional string github_default_branch = 15;
  optional string github_connected_at = 16;

  // Encryption mode: "enhanced" (default), "hybrid_e2e", or "full_e2e"
  // - enhanced: Server-side encryption at rest, full AI features
  // - hybrid_e2e: E2E encrypted storage, on-demand AI analysis (user triggers)
  // - full_e2e: E2E encrypted storage, no AI features
  string encryption_mode = 17;
}

// ============================================================================
// Session Messages
// ============================================================================

message CreateSessionRequest {
  string project_name = 1;
  optional string project_path = 2;
  string start_time = 3;
  optional string end_time = 4;
  optional string name = 5;
  string tool_name = 6;
  optional string git_branch = 7;
  optional string type = 17; // Session type: feature, bugfix, refactor, exploration, debugging

  // Token counts
  int64 input_tokens = 8;
  int64 output_tokens = 9;
  int64 cache_create_tokens = 10;
  int64 cache_read_tokens = 11;

  // Structured data
  repeated TodoSnapshot todo_snapshots = 12;
  reserved 13;
  reserved "plans";
  repeated AttachmentMetadata attachment_urls = 14;
  repeated InteractionData interactions = 15;
  map<string, string> metadata = 16;
  optional string sub_sessions_json = 18; // JSONB data as JSON string

  // Encryption fields (for E2E encrypted sessions)
  optional string encryption_status = 19;  // "plaintext" or "encrypted"
  optional int32 encryption_version = 20;  // Key version used for encryption

  // Encrypted JSONB fields (when encryption_status = "encrypted")
  // These contain EncryptedPayload JSON: {encryptedContent, encryptedKey, iv, version}
  optional string encrypted_interactions = 21;
  optional string encrypted_todo_snapshots = 22;
  reserved 23;
  reserved "encrypted_plans";
  optional string encrypted_sub_sessions = 24;
  optional string encrypted_attachment_urls = 25;

  // Plan slug - path is derived as {teamId}/plans/{sessionId}/{slug}.md
  // Plan file content is uploaded separately via UploadPlanFile RPC
  optional string plan_slug = 26;
}

message CreateSessionResponse {
  string session_id = 1;
  bool success = 2;
  string message = 3;
}

message UpsertSessionResponse {
  string session_id = 1;
  bool was_updated = 2; // true if existing session was updated, false if new session was created
  bool success = 3;
  string message = 4;
  int32 new_interactions_count = 5; // number of new interactions added (for updates, only newly appended ones)

  // Analysis status (triggered automatically based on user preferences)
  bool analysis_triggered = 6;
  bool observations_triggered = 7;
}

message GetSessionRequest {
  string session_id = 1;
}

message UpdateSessionRequest {
  string session_id = 1;
  optional string end_time = 2;
}

message Session {
  string id = 1;
  string project_id = 2;
  string user_id = 3;
  string start_time = 4;
  optional string end_time = 5;
  optional string name = 6;
  optional string git_branch = 7;
  int64 input_tokens = 8;
  int64 output_tokens = 9;
  int64 cache_create_tokens = 10;
  int64 cache_read_tokens = 11;
  int32 interaction_count = 12;
  repeated TodoSnapshot todo_snapshots = 13;
  reserved 14;
  reserved "plans";
  repeated AttachmentMetadata attachment_urls = 15;
  map<string, string> metadata = 16;
  string created_at = 17;
  string updated_at = 18;
  optional string sub_sessions_json = 19; // JSONB data as JSON string
}

// ============================================================================
// Interaction Messages
// ============================================================================

message StreamInteractionsRequest {
  string session_id = 1;
  InteractionData interaction = 2;
}

message StreamInteractionsResponse {
  int32 processed = 1;
  int32 failed = 2;
  bool success = 3;
  string message = 4;
}

message AddInteractionsBatchRequest {
  string session_id = 1;
  repeated InteractionData interactions = 2;
}

message AddInteractionsBatchResponse {
  int32 processed = 1;
  int32 failed = 2;
  bool success = 3;
  string message = 4;
}

message InteractionData {
  string timestamp = 1;
  string interaction_type = 2;
  string content = 3;
  optional string tool_name = 4;
  map<string, string> metadata = 5;
  optional int64 input_tokens = 6;
  optional int64 output_tokens = 7;
}

// ============================================================================
// Supporting Types
// ============================================================================

message TodoSnapshot {
  string timestamp = 1;
  repeated Todo todos = 2;
}

message Todo {
  string content = 1;
  string status = 2;
  string active_form = 3;
}

message AttachmentMetadata {
  string storage_path = 1;
  string public_url = 2;
  string media_type = 3;
  int32 interaction_index = 4;
  string uploaded_at = 5;
}

// ============================================================================
// Observations Messages (for context injection)
// ============================================================================

message GetProjectObservationsRequest {
  string project_id = 1;
  optional int32 limit = 2; // Max observations to return, default 50
}

message GetProjectObservationsResponse {
  repeated Observation observations = 1;
  int32 total_count = 2;
}

message Observation {
  string id = 1;
  string session_id = 2;
  string project_id = 3;
  string type = 4;              // architecture, pattern, decision, dependency, issue, insight
  string title = 5;
  optional string subtitle = 6;
  string narrative = 7;
  repeated string facts = 8;    // Key facts as array
  repeated string concepts = 9;  // Related concepts/topics
  repeated string files = 10;    // Related file paths
  optional string tool_name = 11;
  string created_at = 12;
}

// ============================================================================
// User Preferences Messages
// ============================================================================

message GetUserPreferencesRequest {
  // Empty - uses authenticated user from context
}

message GetUserPreferencesResponse {
  bool auto_analysis = 1;
  bool auto_observations = 2;
  bool context_injection = 3;
  int32 context_injection_limit = 4;  // Max observations to inject
  bool auto_save_session = 5;         // Auto-save on /clear and session end
  int32 context_injection_max_tokens = 6;  // Token budget for context injection
  int32 context_injection_full_details_count = 7;  // Number of observations to show full details
}

// ============================================================================
// Attachment Storage Messages
// ============================================================================

message UploadAttachmentRequest {
  string session_id = 1;
  int32 interaction_index = 2;
  string base64_data = 3;           // Base64-encoded file data
  string media_type = 4;            // MIME type (e.g., "image/png")
  optional string filename = 5;     // Optional original filename
}

message UploadAttachmentResponse {
  bool success = 1;
  string storage_path = 2;          // Path in storage bucket
  string public_url = 3;            // Public URL to access the file
  string error = 4;                 // Error message if failed
}

// ============================================================================
// Plan File Storage Messages
// ============================================================================

message UploadPlanFileRequest {
  string session_id = 1;            // Session ID to associate the plan with
  string slug = 2;                  // Plan slug (e.g., "purrfect-sleeping-wozniak")
  bytes file_data = 3;              // Raw MD file content as bytes
}

message UploadPlanFileResponse {
  bool success = 1;
  string error = 2;                 // Error message if failed
}

// ============================================================================
// Session Quota Messages (for free tier limit enforcement)
// ============================================================================

message GetSessionQuotaRequest {
  // Empty - uses authenticated user from context
}

message GetSessionQuotaResponse {
  int32 current_count = 1;          // Current number of sessions
  int32 limit = 2;                  // Session limit (-1 for unlimited/Pro tier)
  int32 remaining = 3;              // Remaining sessions (or -1 for unlimited)
  string subscription_tier = 4;     // "free" or "pro"
}

// ============================================================================
// Team Messages
// ============================================================================

// Role enum for team members
enum TeamRole {
  TEAM_ROLE_UNSPECIFIED = 0;
  TEAM_ROLE_OWNER = 1;
  TEAM_ROLE_ADMIN = 2;
  TEAM_ROLE_MEMBER = 3;
  TEAM_ROLE_VIEWER = 4;
}

// Team plan enum
enum TeamPlan {
  TEAM_PLAN_UNSPECIFIED = 0;
  TEAM_PLAN_STARTER = 1;
  TEAM_PLAN_PRO = 2;
  TEAM_PLAN_ENTERPRISE = 3;
}

// Core Team entity
message Team {
  string id = 1;
  string name = 2;
  string slug = 3;
  string owner_id = 4;
  bool is_personal = 14;               // True for single-person "Personal" teams
  optional string avatar_url = 5;
  optional string description = 6;
  string public_key = 7;               // Team's public encryption key
  int32 key_version = 8;
  string created_at = 9;
  string updated_at = 10;

  // Included when fetching team details
  int32 member_count = 11;
  TeamRole current_user_role = 12;     // Role of the requesting user
  optional TeamSubscription subscription = 13;
}

// Team member entity
message TeamMember {
  string id = 1;
  string team_id = 2;
  string user_id = 3;
  string email = 4;
  TeamRole role = 5;
  optional string invited_by = 6;
  string joined_at = 7;
  bool has_encrypted_key = 8;          // Whether member has received team key
}

// Team invitation entity
message TeamInvitation {
  string id = 1;
  string team_id = 2;
  string email = 3;
  TeamRole role = 4;
  string invited_by = 5;
  string expires_at = 6;
  string created_at = 7;
  optional string team_name = 8;       // Included for invitee view
}

// Team subscription entity
message TeamSubscription {
  string id = 1;
  string team_id = 2;
  TeamPlan plan = 3;
  string status = 4;
  int32 seat_count = 5;
  optional string current_period_start = 6;
  optional string current_period_end = 7;
  int32 credits_remaining = 8;
}

// ============================================================================
// Team CRUD Messages
// ============================================================================

message CreateTeamRequest {
  string name = 1;
  string slug = 2;
  optional string description = 3;
  optional string avatar_url = 4;

  // E2E Encryption: Client generates team key pair
  string public_key = 5;                      // Team's public key
  string encrypted_private_key = 6;           // Team's private key encrypted with owner's public key
}

message GetTeamRequest {
  oneof identifier {
    string id = 1;
    string slug = 2;
  }
}

message UpdateTeamRequest {
  string team_id = 1;
  optional string name = 2;
  optional string slug = 3;
  optional string description = 4;
  optional string avatar_url = 5;
}

message DeleteTeamRequest {
  string team_id = 1;
}

message DeleteTeamResponse {
  bool success = 1;
  string message = 2;
}

message ListUserTeamsRequest {
  // Empty - uses authenticated user from context
}

message ListUserTeamsResponse {
  repeated Team teams = 1;
}

// ============================================================================
// Team Membership Messages
// ============================================================================

message InviteMemberRequest {
  string team_id = 1;
  string email = 2;
  TeamRole role = 3;
}

message InviteMemberResponse {
  bool success = 1;
  string invitation_token = 2;         // Plaintext token (only returned once)
  string invitation_id = 3;
  string expires_at = 4;
  string message = 5;
}

message AcceptInvitationRequest {
  string token = 1;                    // Plaintext invitation token

  // E2E Encryption: New member receives team key encrypted for them
  string encrypted_team_key = 2;       // Team private key encrypted with user's public key
}

message AcceptInvitationResponse {
  bool success = 1;
  string team_id = 2;
  string team_name = 3;
  TeamRole role = 4;
  string message = 5;
}

message RevokeInvitationRequest {
  string invitation_id = 1;
}

message RevokeInvitationResponse {
  bool success = 1;
  string message = 2;
}

message ListPendingInvitationsRequest {
  string team_id = 1;
}

message ListPendingInvitationsResponse {
  repeated TeamInvitation invitations = 1;
}

message RemoveMemberRequest {
  string team_id = 1;
  string user_id = 2;
}

message RemoveMemberResponse {
  bool success = 1;
  string message = 2;
}

message UpdateMemberRoleRequest {
  string team_id = 1;
  string user_id = 2;
  TeamRole new_role = 3;
}

message UpdateMemberRoleResponse {
  bool success = 1;
  TeamMember member = 2;
  string message = 3;
}

message ListMembersRequest {
  string team_id = 1;
}

message ListMembersResponse {
  repeated TeamMember members = 1;
  int32 total_count = 2;
}

message TransferOwnershipRequest {
  string team_id = 1;
  string new_owner_id = 2;
}

message TransferOwnershipResponse {
  bool success = 1;
  string message = 2;
}

// ============================================================================
// Team Encryption Key Messages
// ============================================================================

message GetTeamPublicKeyRequest {
  string team_id = 1;
}

message GetTeamPublicKeyResponse {
  string public_key = 1;
  int32 key_version = 2;
}

// ============================================================================
// User Encryption Key Messages
// ============================================================================

message GetUserPublicKeyRequest {
  // Empty - uses authenticated user from context
}

message GetUserPublicKeyResponse {
  string public_key = 1;
  int32 key_version = 2;
}

// ============================================================================
// Team Skills Messages
// ============================================================================

message GetTeamSkillsRequest {
  string team_id = 1;
  optional string project_id = 2;     // Filter by project (optional)
  optional string scope = 3;           // Filter: "team" or "project" (optional)
}

message TeamSkillProto {
  string id = 1;
  string slug = 2;
  string title = 3;
  optional string summary = 4;
  string content = 5;
  string category = 6;
  repeated string tags = 7;
  string scope = 8;
  int32 version = 9;
  optional string last_published_at = 10;
  optional string project_id = 11;
}

message GetTeamSkillsResponse {
  repeated TeamSkillProto skills = 1;
}

message CreateTeamSkillRequest {
  string team_id = 1;
  optional string project_id = 2;
  string title = 3;
  string content = 4;
  optional string summary = 5;
  optional string category = 6;
  repeated string tags = 7;
  optional string scope = 8;          // "team" (default) or "project"
}

message CreateTeamSkillResponse {
  string skill_id = 1;
  string slug = 2;
}
